--- a/source/sass/components/heading.scss
+++ b/source/sass/components/heading.scss
@@ -1,5 +1,5 @@
 .heading {
-  font-family: 'Oswald';
+  font-family: 'Oswald', sans-serif;
   font-style: normal;
   font-weight: 400;
   text-transform: uppercase;
