--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,6 +15,7 @@
 @use 'components/link';
 @use 'components/logo';
 @use 'components/main-container';
+@use 'components/main-footer';
 @use 'components/main-header';
 @use 'components/main-nav';
 @use 'components/main-products';
@@ -30,4 +31,3 @@
 @use 'components/slider';
 @use 'components/social';
 @use 'components/special-offer';
-@use 'components/step-list';
