--- a/source/sass/components/heading.scss
+++ b/source/sass/components/heading.scss
@@ -1,6 +1,9 @@
+@use '../base/variables' as *;
+
 .heading {
-  font-family: 'Oswald', sans-serif;
+  margin: 0;
+
+  font-family: $fontSecondary;
   font-style: normal;
   font-weight: 400;
-  text-transform: uppercase;
 }
