Добавлены базовые стили компонентов страницы формы

--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -15,6 +15,9 @@ $linkColorSecondary: #444444;
 
 $buttonColor: #68B738;
 
+$borderColor: #E7E7E7;
+$borderColorSecondary: #CDCDCD;
+
 
 // Font
 $font: 'Lato', sans-serif;
