--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,6 +6,7 @@
 @use 'components/additional-products';
 @use 'components/address';
 @use 'components/button';
+@use 'components/checkbox';
 @use 'components/contacts';
 @use 'components/copyright';
 @use 'components/example-cat';
@@ -26,6 +27,7 @@
 @use 'components/product-list';
 @use 'components/program-form';
 @use 'components/promo';
+@use 'components/radio';
 @use 'components/secondary-trademark';
 @use 'components/site-list';
 @use 'components/slider';
