--- a/source/sass/components/main-container.scss
+++ b/source/sass/components/main-container.scss
@@ -4,6 +4,18 @@
 
 }
 
+.main-container__promo {
+  margin-bottom: 20px;
+}
+
+.main-container__feed-serie {
+  margin-bottom: 20px;
+}
+
+.main-container__guide {
+  margin-bottom: 50px;
+}
+
 .main-container__title {
   font-size: 36px;
   line-height: 36px;
