--- a/source/sass/components/example-cat.scss
+++ b/source/sass/components/example-cat.scss
@@ -1,6 +1,7 @@
 @use '../base/variables' as *;
 
 .example-cat {
+  padding: 25px 0 40px;
   background-color: $bgColorSecondary;
 }
 
@@ -22,6 +23,8 @@
 }
 
 .example-cat__description-text {
+  margin: 0;
+
   font-family: $fontSecondary;
   font-size: 24px;
   line-height: 24px;
