--- a/source/sass/components/site-list.scss
+++ b/source/sass/components/site-list.scss
@@ -1,5 +1,12 @@
 .site-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
 
+.site-list__item {
+  padding: 22px 60px 24px;
+  text-align: center;
 }
 
 .site-list__link {
