--- a/source/sass/components/additional-products.scss
+++ b/source/sass/components/additional-products.scss
@@ -1,5 +1,7 @@
 @use '../base/variables.scss' as *;
 
+// Раздел "Дополнительные товары"
+
 .additional-products__title {
-  background-color: $bgColor;
+  background-color: $bg-color;
 }
