--- a/source/sass/components/copyright.scss
+++ b/source/sass/components/copyright.scss
@@ -8,5 +8,5 @@
   font-size: 16px;
   line-height: 19px;
   text-decoration: none;
-  color: $linkColorSecondary;
+  color: $link-color-secondary;
 }
