--- a/source/sass/components/heading.scss
+++ b/source/sass/components/heading.scss
@@ -3,7 +3,7 @@
 .heading {
   margin: 0;
 
-  font-family: $fontSecondary;
+  font-family: $font-secondary;
   font-style: normal;
   font-weight: 400;
 }
