--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -1,27 +1,27 @@
 // Colors
 
-$bgColor: #FFFFFF;
-$bgColorExtra: #F2F2F2;
-$bgColorSecondary: #D9D9D9;
-$bgColorAccent: #68B738;
+$bg-color: #FFFFFF;
+$bg-color-extra: #F2F2F2;
+$bg-color-secondary: #D9D9D9;
+$bg-color-accent: #68B738;
 
-$fontColor: #000000;
-$fontColorSecondary: #444444;
-$fontColorSecondarySpecial: #222222;
-$fontColorAccent: #FFFFFF;
+$font-color: #000000;
+$font-color-secondary: #444444;
+$font-color-secondary-special: #222222;
+$font-color-accent: #FFFFFF;
 
-$linkColor: #000000;
-$linkColorSecondary: #444444;
+$link-color: #000000;
+$link-color-secondary: #444444;
 
-$buttonColor: #68B738;
+$button-color: #68B738;
 
-$borderColor: #E7E7E7;
-$borderColorSecondary: #CDCDCD;
-$borderColorThird: #EBEBEB;
+$border-color: #E7E7E7;
+$border-color-secondary: #CDCDCD;
+$border-color-third: #EBEBEB;
 
 
 // Font
 $font: 'Lato', sans-serif;
-$fontSecondary: 'Oswald', sans-serif;
+$font-secondary: 'Oswald', sans-serif;
 
 
