--- a/source/sass/components/checkbox.scss
+++ b/source/sass/components/checkbox.scss
@@ -1,15 +1,16 @@
 @use '../base/variables' as *;
+@use '../base/mixin.scss' as mix;
 
 .checkbox {
-  list-style-type: none;
+  @include mix.list-reset;
 }
 
 .checkbox__text {
-  font-family: $fontSecondary;
+  font-family: $font-secondary;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
-  color: $fontColor;
+  color: $font-color;
 }
