--- a/source/sass/components/decor-line.scss
+++ b/source/sass/components/decor-line.scss
@@ -7,7 +7,7 @@
 .decor-line::after {
   position: absolute;
   content: '';
-  background-color: $bgColorAccent;
+  background-color: $bg-color-accent;
   height: 2px;
   width: 100%;
   left: 0;
