--- a/source/sass/components/example-cat.scss
+++ b/source/sass/components/example-cat.scss
@@ -2,7 +2,7 @@
 
 .example-cat {
   padding: 25px 0 40px;
-  background-color: $bgColorSecondary;
+  background-color: $bg-color-secondary;
 }
 
 .example-cat__title {
@@ -12,27 +12,27 @@
 
 .example-cat__text {
   margin: 0;
-  color: $fontColorSecondary;
+  color: $font-color-secondary;
 }
 
 .example-cat__description-termin {
   font-size: 12px;
   line-height: 12px;
   text-transform: lowercase;
-  color: $fontColorSecondary;
+  color: $font-color-secondary;
 }
 
 .example-cat__description-text {
   margin: 0;
 
-  font-family: $fontSecondary;
+  font-family: $font-secondary;
   font-size: 24px;
   line-height: 24px;
   text-transform: uppercase;
 }
 
 .example-cat__costs-caption {
-  font-family: $fontSecondary;
+  font-family: $font-secondary;
   font-size: 14px;
   line-height: 20px;
   text-align: center;
