--- a/source/sass/components/guide.scss
+++ b/source/sass/components/guide.scss
@@ -1,4 +1,5 @@
 @use '../base/variables' as *;
+@use '../base/mixin.scss' as mix;
 
 .guide {
 
@@ -10,9 +11,7 @@
 }
 
 .guide__list {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
+  @include mix.list-reset;
 }
 
 .guide__list-text {
