--- a/source/sass/components/page.scss
+++ b/source/sass/components/page.scss
@@ -14,7 +14,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
-  color: $fontColor;
+  color: $font-color;
 
-  background-color: $bgColor;
+  background-color: $bg-color;
 }
