--- a/source/sass/components/program-form.scss
+++ b/source/sass/components/program-form.scss
@@ -1,7 +1,7 @@
 @use '../base/variables' as *;
 
 .program-form {
-  font-family: $fontSecondary;
+  font-family: $font-secondary;
 }
 
 .program-form__text {
@@ -22,31 +22,31 @@
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
-  color: $fontColorSecondary;
+  color: $font-color-secondary;
 }
 
 .program-form__input {
-  font-family: $fontSecondary;
+  font-family: $font-secondary;
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
-  color: $fontColorSecondary;
+  color: $font-color-secondary;
 
-  border: 1px solid $borderColor;
+  border: 1px solid $border-color;
 
   &--has-icon {
-    border-color: $borderColorSecondary;
+    border-color: $border-color-secondary;
   }
 }
 
 .program-form__textarea {
-  font-family: $fontSecondary;
+  font-family: $font-secondary;
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
-  color: $fontColorSecondary;
+  color: $font-color-secondary;
 
-  border: 1px solid $borderColor;
+  border: 1px solid $border-color;
   resize: none;
 }
 
