--- a/source/sass/components/promo.scss
+++ b/source/sass/components/promo.scss
@@ -1,13 +1,13 @@
 @use '../base/variables' as *;
 
 .promo {
-  color: $fontColorAccent;
+  color: $font-color-accent;
 
   &--theme-phone {
     position: relative;
 
     background-image: url('../../img/promo-background.jpg');
-    background-color: $bgColorAccent;
+    background-color: $bg-color-accent;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -20,7 +20,7 @@
       width: 100%;
       height: 100%;
 
-      background-color: $bgColorAccent;
+      background-color: $bg-color-accent;
       opacity: 85%;
     }
   }
@@ -39,7 +39,7 @@
 .promo__description {
   margin: 0;
 
-  font-family: $fontSecondary;
+  font-family: $font-secondary;
   line-height: 14px;
   text-transform: uppercase;
   text-align: center;
