--- a/source/sass/components/site-list.scss
+++ b/source/sass/components/site-list.scss
@@ -1,7 +1,9 @@
+@use '../base/mixin.scss' as mix;
+
+// Site navigation
+
 .site-list {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
+  @include mix.list-reset;
 }
 
 .site-list__item {
