--- a/source/sass/components/special-offer.scss
+++ b/source/sass/components/special-offer.scss
@@ -7,7 +7,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-color: $bgColorAccent;
+  background-color: $bg-color-accent;
 
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -17,6 +17,6 @@
 
   font-size: 16px;
   line-height: 20px;
-  color: $fontColorAccent;
+  color: $font-color-accent;
   text-align: center;
 }
