--- a/source/sass/components/address.scss
+++ b/source/sass/components/address.scss
@@ -8,7 +8,7 @@
   padding: 26px 0;
 
   &--secondary {
-    background-color: $bgColorExtra;
+    background-color: $bg-color-extra;
   }
 }
 
@@ -22,5 +22,5 @@
   margin: 0;
 
   line-height: 20px;
-  color: $fontColorSecondary;
+  color: $font-color-secondary;
 }
