--- a/source/sass/components/product-card.scss
+++ b/source/sass/components/product-card.scss
@@ -2,21 +2,21 @@
 
 .product-card {
   line-height: 14px;
-  color: $fontColorSecondary;
+  color: $font-color-secondary;
 
   &--primary {
-    border: 1px solid $borderColorThird;
+    border: 1px solid $border-color-third;
     padding: 25px 0;
   }
 
   &--secondary {
-    border: 1px solid $borderColorSecondary;
+    border: 1px solid $border-color-secondary;
     padding: 13px 0 19px;
   }
 }
 
 .product-card__title {
-  color: $fontColorSecondarySpecial;
+  color: $font-color-secondary-special;
 }
 
 .product-card__description {
