--- a/source/sass/components/feed-serie.scss
+++ b/source/sass/components/feed-serie.scss
@@ -2,7 +2,7 @@
 
 .feed-serie {
   padding: 20px;
-  background-color: $bgColorSecondary;
+  background-color: $bg-color-secondary;
 }
 
 .feed-serie__title {
@@ -14,7 +14,7 @@
 .feed-serie__description {
   margin: 0;
 
-  color: $fontColorSecondary;
+  color: $font-color-secondary;
 }
 
 .feed-serie__link {
