--- a/source/sass/components/link.scss
+++ b/source/sass/components/link.scss
@@ -1,9 +1,9 @@
 @use '../base/variables' as *;
 
 .link {
-  font-family: $fontSecondary;
+  font-family: $font-secondary;
   font-style: normal;
   text-decoration: none;
   text-transform: uppercase;
-  color: $linkColor;
+  color: $link-color;
 }
