--- a/source/sass/components/guide.scss
+++ b/source/sass/components/guide.scss
@@ -1,5 +1,5 @@
-@use '../base/variables' as *;
-@use '../base/mixin.scss' as mix;
+@use "../base/variables" as *;
+@use "../base/mixin.scss" as mix;
 
 .guide {
 
