--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -1,25 +1,25 @@
 // Colors
 
-$bg-color: #FFFFFF;
-$bg-color-extra: #F2F2F2;
-$bg-color-secondary: #D9D9D9;
-$bg-color-accent: #68B738;
+$bg-color: #ffffff;
+$bg-color-extra: #f2f2f2;
+$bg-color-secondary: #d9d9d9;
+$bg-color-accent: #68b738;
 
 $font-color: #000000;
 $font-color-secondary: #444444;
 $font-color-secondary-special: #222222;
-$font-color-accent: #FFFFFF;
+$font-color-accent: #ffffff;
 
 $link-color: #000000;
 $link-color-secondary: #444444;
 
-$button-color: #68B738;
+$button-color: #69b738;
 
-$border-color: #E7E7E7;
-$border-color-secondary: #CDCDCD;
-$border-color-third: #EBEBEB;
+$border-color: #e7e7e7;
+$border-color-secondary: #cdcdcd;
+$border-color-third: #ebebeb;
 
 
 // Font
-$font: 'Lato', sans-serif;
-$font-secondary: 'Oswald', sans-serif;
+$font: "Lato", sans-serif;
+$font-secondary: "Oswald", sans-serif;
