--- a/source/sass/components/special-offer.scss
+++ b/source/sass/components/special-offer.scss
@@ -1,15 +1,15 @@
-@use '../base/variables' as *;
+@use "../base/variables" as *;
 
 .special-offer {
   padding: 185px 60px 43px;
 
-  background-image: url('../../img/special-offer.jpg');
+  background-image: url("../../img/special-offer.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   background-color: $bg-color-accent;
 
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .special-offer__text {
