--- a/source/sass/components/copyright.scss
+++ b/source/sass/components/copyright.scss
@@ -4,6 +4,15 @@
 
 }
 
+.copyright__wrapper {
+  display: flex;
+  justify-content: space-between;
+
+  @media (min-width: $tablet-width) {
+    justify-content: end;
+  }
+}
+
 .copyright__link {
   font-size: 16px;
   line-height: 19px;
