--- a/source/sass/base/container.scss
+++ b/source/sass/base/container.scss
@@ -1,3 +1,16 @@
+@use '../base/variables' as *;
+
 .container {
+  width: calc(100% - 40px);
   margin: 0 auto;
+
+  @media (min-width: $tablet-width) {
+    width: 90%;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 80%;
+    max-width: $desktop-width;
+  }
+
 }
