--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -2,7 +2,7 @@
 
 $bg-color: #ffffff;
 $bg-color-extra: #f2f2f2;
-$bg-color-secondary: #d9d9d9;
+$bg-color-secondary: #eaeaea;
 $bg-color-accent: #68b738;
 
 $font-color: #000000;
@@ -23,3 +23,7 @@ $border-color-third: #ebebeb;
 // Font
 $font: "Lato", sans-serif;
 $font-secondary: "Oswald", sans-serif;
+
+// Widths
+$tablet-width: 768px;
+$desktop-width: 1220px;
