--- a/source/sass/components/address.scss
+++ b/source/sass/components/address.scss
@@ -1,21 +1,42 @@
 @use "../base/variables" as *;
 
 .address {
-}
-
-.address__wrapper {
-  display: flex;
-  padding: 26px 0;
+  position: relative;
 
   &--secondary {
     background-color: $bg-color-extra;
   }
 }
 
+.address__wrapper {
+  display: flex;
+  justify-content: space-between;
+  padding: 26px 0;
+
+  @media (min-width: $tablet-width) {
+    padding: 56px 40px;
+  }
+
+  @media (min-width: $desktop-width) {
+    position: absolute;
+    background-color: $bg-color;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+  }
+}
+
 .address__title {
+  margin: 0;
+
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 26px;
+  }
 }
 
 .address__text {
@@ -23,4 +44,16 @@
 
   line-height: 20px;
   color: $font-color-secondary;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 20px;
+    text-align: end;
+  }
+}
+
+.address__map {
+  @media (min-width: $tablet-width) {
+    height: 400px;
+  }
 }
