--- a/source/sass/components/feed-serie.scss
+++ b/source/sass/components/feed-serie.scss
@@ -1,20 +1,54 @@
 @use "../base/variables" as *;
 
 .feed-serie {
-  padding: 20px;
   background-color: $bg-color-secondary;
+  padding: 30px 33px 18px 20px;
+
+  @media (min-width: $tablet-width) {
+    padding: 77px 316px 53px 52px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 77px 52px 55px;
+  }
+
 }
 
 .feed-serie__title {
+  margin: 0;
+
   font-size: 24px;
   line-height: 37px;
   text-transform: uppercase;
+  margin-bottom: 29px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 36px;
+    line-height: 36px;
+    margin-bottom: 24px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 73px;
+  }
 }
 
 .feed-serie__description {
   margin: 0;
-
+  margin-bottom: 38px;
   color: $font-color-secondary;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 24px;
+    color: $font-color;
+    margin-bottom: 48px;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-height: 72px;
+    margin-bottom: 23px;
+  }
 }
 
 .feed-serie__link {
