--- a/source/sass/components/guide.scss
+++ b/source/sass/components/guide.scss
@@ -2,19 +2,70 @@
 @use "../base/mixin.scss" as mix;
 
 .guide {
+  @media (min-width: $tablet-width) {
+    border-bottom: 1px solid $border-color;
+  }
 
+  @media (min-width: $desktop-width) {
+    border-bottom: none;
+  }
 }
 
 .guide__title {
+  margin: 0;
+
   font-size: 36px;
   line-height: 40px;
+
+  margin-bottom: 40px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+    margin-bottom: 32px;
+  }
 }
 
 .guide__list {
   @include mix.list-reset;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  row-gap: 20px;
+
+  @media (min-width: $tablet-width) {
+    grid-template-columns: 2fr 2fr;
+    column-gap: 8%;
+    row-gap: 37px;
+    align-items: start;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 8%;
+    row-gap: 37px;
+    align-items: start;
+  }
+}
+
+.guide__list-item {
+  grid-column: 2 / -1;
+
+  @media (min-width: $tablet-width) {
+    grid-column: auto;
+    padding: 150px 121px 57px 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 150px 22px 57px 0;
+  }
 }
 
 .guide__list-text {
   margin: 0;
   color: $font-color-secondary;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
