--- a/source/sass/components/main-container.scss
+++ b/source/sass/components/main-container.scss
@@ -2,10 +2,27 @@
 
 .main-container {
 
+  &--secondary {
+    @media (min-width: $desktop-width) {
+      padding-top: 188px;
+    }
+  }
 }
 
 .main-container__promo {
   margin-bottom: 20px;
+}
+
+.main-container__feed-serie-wrapper {
+
+  @media (min-width: $desktop-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 8%;
+    margin: 0 auto;
+    width: 80%;
+    max-width: $desktop-width;
+  }
 }
 
 .main-container__feed-serie {
@@ -17,6 +34,67 @@
 }
 
 .main-container__title {
+  margin: 0;
+
   font-size: 36px;
   line-height: 36px;
+
+  &--catalog {
+    margin-top: 27px;
+    margin-bottom: 40px;
+
+    @media (min-width: $tablet-width) {
+      font-size: 60px;
+      line-height: 60px;
+      margin-top: 83px;
+      margin-bottom: 64px;
+      text-align: center;
+    }
+
+    @media (min-width: $desktop-width) {
+      margin-top: 0;
+      margin-bottom: 84px;
+      text-align: start;
+    }
+  }
+
+  &--form {
+    margin-top: 27px;
+    margin-bottom: 37px;
+
+    @media (min-width: $tablet-width) {
+      font-size: 60px;
+      line-height: 60px;
+      margin-top: 65px;
+      margin-bottom: 54px;
+      padding: 0 40px;
+    }
+
+    @media (min-width: $desktop-width) {
+      padding: 0;
+      margin-top: 0;
+      margin-bottom: 56px;
+    }
+  }
 }
+
+.main-container__main-products {
+  margin-bottom: 25px;
+}
+
+.main-container__catalog-wrapper {
+  @media (min-width: $desktop-width) {
+    display: flex;
+    gap: 80px;
+  }
+}
+
+.main-container__additional-products {
+  margin-bottom: 35px;
+}
+
+.main-container__special-offer {
+  margin-bottom: 35px;
+}
+
+
