--- a/source/sass/components/page.scss
+++ b/source/sass/components/page.scss
@@ -6,8 +6,9 @@
 }
 
 .page__body {
+  position: relative;
   margin: 0;
-  height: 100%;
+  min-height: 100%;
 
   font-family: $font;
   font-style: normal;
