--- a/source/sass/components/program-form.scss
+++ b/source/sass/components/program-form.scss
@@ -1,21 +1,66 @@
 @use "../base/variables" as *;
+@use "../base/mixin.scss" as mix;
 
 .program-form {
   font-family: $font-secondary;
 }
 
+.program-form__wrapper {
+  display: grid;
+  grid-template-columns: 1fr;
+
+  @media (min-width: $tablet-width) {
+    padding: 0 40px;
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 0;
+  }
+}
+
 .program-form__text {
+  grid-column: 1 / -1;
   margin: 0;
+  margin-bottom: 39px;
   text-transform: uppercase;
 }
 
 .program-form__group {
+  grid-column: 1 / -1;
+
+  margin: 0;
+  margin-bottom: 24px;
+  padding: 0;
   border: none;
+
+  display: flex;
+  flex-wrap: wrap;
+  gap: 14px;
+
+  &--cat-information {
+    @media (min-width: $desktop-width) {
+      grid-column: 1 / 3;
+    }
+  }
+
+  &--feed-program {
+    @media (min-width: $desktop-width) {
+      grid-column: 3 / -1;
+    }
+  }
 }
 
 .program-form__group-title {
+  margin-bottom: 35px;
   font-size: 24px;
   line-height: 26px;
+}
+
+.program-form__label {
+  flex-grow: 1;
+  display: flex;
+  gap: 13px;
 }
 
 .program-form__label-text {
@@ -26,6 +71,8 @@
 }
 
 .program-form__input {
+  flex-grow: 1;
+
   font-family: $font-secondary;
   font-size: 16px;
   line-height: 18px;
@@ -39,7 +86,22 @@
   }
 }
 
+.program-form__list {
+  @include mix.list-reset;
+
+  &--additional {
+    @media (min-width: $desktop-width) {
+      flex-grow: 1;
+      flex-direction: row;
+      justify-content: space-between;
+    }
+  }
+}
+
 .program-form__textarea {
+  flex-grow: 1;
+  min-height: 150px;
+
   font-family: $font-secondary;
   font-size: 16px;
   line-height: 18px;
@@ -48,6 +110,14 @@
 
   border: 1px solid $border-color;
   resize: none;
+}
+
+.program-form__button {
+  padding: 7px 45px;
+
+  @media (min-width: $tablet-width) {
+    grid-column: 1 / 3;
+  }
 }
 
 .program-form__note {
