--- a/source/sass/components/promo.scss
+++ b/source/sass/components/promo.scss
@@ -2,9 +2,24 @@
 
 .promo {
   color: $font-color-accent;
+  position: relative;
 
-  &--theme-phone {
-    position: relative;
+  @media (min-width: $tablet-width) {
+    color: $font-color;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 112px;
+  }
+
+  &::before {
+    z-index: -3;
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 68%;
+    top: 0;
+    left: 0;
 
     background-image: url("../../img/promo-background.jpg");
     background-color: $bg-color-accent;
@@ -12,28 +27,76 @@
     background-size: cover;
     background-position: center;
 
-    &::before {
-      position: absolute;
-      content: "";
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+    @media (min-width: $tablet-width) {
+      display: none;
+    }
 
-      background-color: $bg-color-accent;
-      opacity: 85%;
+    @media (min-width: $desktop-width) {
+      display: block;
+      height: 100%;
+      width: 50%;
+      left: 50%;
+    }
+  }
+
+  &::after {
+    z-index: -2;
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 68%;
+
+    background-color: $bg-color-accent;
+    opacity: 85%;
+
+    @media (min-width: $tablet-width) {
+      display: none;
+    }
+
+    @media (min-width: $desktop-width) {
+      display: block;
+      height: 100%;
+      width: 50%;
+      left: 50%;
     }
   }
 }
 
-.promo__container {
+.promo__wrapper {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  padding: 27px 0;
+
+  @media (min-width: $tablet-width) {
+    position: relative;
+    padding: 64px 206px 526px 90px;
+    align-items: start;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 111px 600px 185px 80px;
+  }
 }
 
 .promo__title {
+  margin: 0;
+
   font-size: 36px;
   line-height: 36px;
   text-align: center;
+
+  margin-bottom: 25px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+    text-align: start;
+
+    margin-bottom: 41px;
+  }
 }
 
 .promo__description {
@@ -43,4 +106,40 @@
   line-height: 14px;
   text-transform: uppercase;
   text-align: center;
+
+  margin-bottom: 29px;
+
+  @media (min-width: $tablet-width) {
+    text-align: start;
+    font-size: 20px;
+    line-height: 20px;
+    margin-bottom: 49px;
+  }
+}
+
+.promo__image {
+  align-self: center;
+  @media (min-width: $tablet-width) {
+    z-index: -1;
+    width: 700px;
+    height: 609px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 552px;
+    height: 499px;
+  }
+}
+
+.promo__button {
+  padding: 13px 44px;
+
+  @media (min-width: $tablet-width) {
+    padding: 14px 25px;
+    font-size: 20px;
+    line-height: 20px;
+  }
 }
