--- a/source/sass/components/radio.scss
+++ b/source/sass/components/radio.scss
@@ -2,7 +2,10 @@
 @use "../base/mixin.scss" as mix;
 
 .radio {
-  @include mix.list-reset;
+  padding: 20px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 13px;
 }
 
 .radio__text {
