--- a/source/sass/components/feed-serie.scss
+++ b/source/sass/components/feed-serie.scss
@@ -15,12 +15,11 @@
 }
 
 .feed-serie__title {
-  margin: 0;
+  margin: 0 0 29px 0;
 
   font-size: 24px;
   line-height: 37px;
   text-transform: uppercase;
-  margin-bottom: 29px;
 
   @media (min-width: $tablet-width) {
     font-size: 36px;
@@ -34,8 +33,7 @@
 }
 
 .feed-serie__description {
-  margin: 0;
-  margin-bottom: 38px;
+  margin: 0 0 38px 0;
   color: $font-color-secondary;
 
   @media (min-width: $tablet-width) {
