--- a/source/sass/components/guide.scss
+++ b/source/sass/components/guide.scss
@@ -12,12 +12,10 @@
 }
 
 .guide__title {
-  margin: 0;
+  margin: 0 0 40px 0;
 
   font-size: 36px;
   line-height: 40px;
-
-  margin-bottom: 40px;
 
   @media (min-width: $tablet-width) {
     font-size: 60px;
@@ -28,6 +26,7 @@
 
 .guide__list {
   @include mix.list-reset;
+
   display: grid;
   grid-template-columns: 1fr 3fr;
   row-gap: 20px;
