--- a/source/sass/components/program-form.scss
+++ b/source/sass/components/program-form.scss
@@ -21,16 +21,14 @@
 
 .program-form__text {
   grid-column: 1 / -1;
-  margin: 0;
-  margin-bottom: 39px;
+  margin: 0 0 39px 0;
   text-transform: uppercase;
 }
 
 .program-form__group {
   grid-column: 1 / -1;
 
-  margin: 0;
-  margin-bottom: 24px;
+  margin: 0 0 24px 0;
   padding: 0;
   border: none;
 
