--- a/source/sass/components/promo.scss
+++ b/source/sass/components/promo.scss
@@ -82,13 +82,11 @@
 }
 
 .promo__title {
-  margin: 0;
+  margin: 0 0 25px 0;
 
   font-size: 36px;
   line-height: 36px;
   text-align: center;
-
-  margin-bottom: 25px;
 
   @media (min-width: $tablet-width) {
     font-size: 60px;
