--- a/source/sass/components/checkbox.scss
+++ b/source/sass/components/checkbox.scss
@@ -2,9 +2,17 @@
 @use "../base/mixin.scss" as mix;
 
 .checkbox {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 1fr;
   gap: 13px;
+
+  @media (min-width: $tablet-width) {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 .checkbox__text {
@@ -15,4 +23,9 @@
   line-height: 18px;
   text-transform: uppercase;
   color: $font-color;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
