--- a/source/sass/components/main-container.scss
+++ b/source/sass/components/main-container.scss
@@ -79,22 +79,25 @@
 }
 
 .main-container__main-products {
-  margin-bottom: 25px;
-}
+  margin: 0 0 25px 0;
 
-.main-container__catalog-wrapper {
-  @media (min-width: $desktop-width) {
-    display: flex;
-    gap: 80px;
+  @media (min-width: $tablet-width) {
+    margin: 0 0 68px 0;
+  }
+
+  @media (min-width: $tablet-width) {
+    margin: 0 0 76px 0;
   }
 }
 
 .main-container__additional-products {
-  margin-bottom: 35px;
+  margin: 0 0 35px 0;
+
+  @media (min-width: $tablet-width) {
+    margin: 0 0 76px 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0 0 85px 0;
+  }
 }
-
-.main-container__special-offer {
-  margin-bottom: 35px;
-}
-
-
