--- a/source/sass/components/special-offer.scss
+++ b/source/sass/components/special-offer.scss
@@ -1,6 +1,8 @@
 @use "../base/variables" as *;
 
 .special-offer {
+  display: flex;
+  justify-content: center;
   padding: 185px 60px 43px;
 
   background-image: url("../../img/special-offer.jpg");
@@ -10,13 +12,29 @@
   background-color: $bg-color-accent;
 
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+
+  @media (min-width: $tablet-width) {
+    justify-content: end;
+    padding: 71px 124px 69px 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    align-items: end;
+    justify-content: center;
+    padding: 185px 43px 42px 41px;
+  }
 }
 
 .special-offer__text {
   margin: 0;
+  max-width: 165px;
+  text-align: center;
 
   font-size: 16px;
   line-height: 20px;
   color: $font-color-accent;
-  text-align: center;
+
+  @media (min-width: $tablet-width) and (max-width: $desktop-width) {
+    text-align: start;
+  }
 }
