--- a/source/sass/base/global.scss
+++ b/source/sass/base/global.scss
@@ -18,11 +18,11 @@ img {
   margin: 0 auto;
 
   @media (min-width: $tablet-width) {
-    width: 90%;
+    width: calc(100% - 30px);
   }
 
   @media (min-width: $desktop-width) {
-    width: 80%;
+    width: calc(100% - 110px);
     max-width: $desktop-width;
     position: relative;
   }
