--- a/source/sass/components/address.scss
+++ b/source/sass/components/address.scss
@@ -28,12 +28,14 @@
 
 .address__title {
   margin: 0;
+  width: 140px;
 
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
 
   @media (min-width: $tablet-width) {
+    width: 175px;
     font-size: 20px;
     line-height: 26px;
   }
@@ -41,14 +43,24 @@
 
 .address__text {
   margin: 0;
+  width: 145px;
 
   line-height: 20px;
   color: $font-color-secondary;
 
   @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: column;
+    text-align: end;
+    width: 160px;
     font-size: 16px;
     line-height: 20px;
-    text-align: end;
+  }
+}
+
+.address__text-line-break {
+  @media (min-width: $tablet-width) {
+    margin: auto 0 0 0;
   }
 }
 
