--- a/source/sass/components/main-container.scss
+++ b/source/sass/components/main-container.scss
@@ -10,25 +10,45 @@
 
 .main-container__promo {
   margin-bottom: 20px;
-}
 
-.main-container__feed-serie-wrapper {
+  @media (min-width: $tablet-width) {
+    margin-bottom: 0;
+  }
+
   @media (min-width: $desktop-width) {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 8%;
-    margin: 0 auto;
-    width: 80%;
-    max-width: $desktop-width;
+    margin-bottom: 82px;
   }
 }
 
-.main-container__feed-serie {
+.main-container__feed-serie-wrapper {
+  display: grid;
+  grid-template-columns: 1fr;
+  row-gap: 20px;
   margin-bottom: 20px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 45px;
+    row-gap: 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 80px;
+    margin-bottom: 71px;
+  }
 }
 
 .main-container__guide {
   margin-bottom: 50px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 90px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 69px;
+  }
 }
 
 .main-container__title {
@@ -38,20 +58,17 @@
   line-height: 36px;
 
   &--catalog {
-    margin-top: 27px;
-    margin-bottom: 40px;
+    margin: 27px 0 40px 0;
 
     @media (min-width: $tablet-width) {
       font-size: 60px;
       line-height: 60px;
-      margin-top: 83px;
-      margin-bottom: 64px;
+      margin: 27px 0 145px 0;
       text-align: center;
     }
 
     @media (min-width: $desktop-width) {
-      margin-top: 0;
-      margin-bottom: 84px;
+      margin: 0 0 84px 0;
       text-align: start;
     }
   }
