--- a/source/sass/components/main-header.scss
+++ b/source/sass/components/main-header.scss
@@ -13,6 +13,7 @@
 }
 
 .main-header__wrapper {
+  position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -21,11 +22,11 @@
 
   @media (min-width: $tablet-width) {
     flex-direction: row;
-    width: 90%;
+    width: calc(100% - 30px);
   }
 
   @media (min-width: $desktop-width) {
-    width: 80%;
+    width: calc(100% - 110px);
     max-width: $desktop-width;
   }
 }
@@ -38,6 +39,7 @@
   align-items: center;
   justify-items: center;
   padding: 12px 0 16.5px;
+  height: 65px;
 
   @media (min-width: $tablet-width) {
     width: auto;
