--- a/source/sass/components/page.scss
+++ b/source/sass/components/page.scss
@@ -9,6 +9,8 @@
   position: relative;
   margin: 0;
   min-height: 100%;
+  display: flex;
+  flex-direction: column;
 
   font-family: $font;
   font-style: normal;
@@ -18,4 +20,8 @@
   color: $font-color;
 
   background-color: $bg-color;
+}
+
+.page__main-container {
+  flex-grow: 1;
 }
