--- a/source/sass/components/product-list-additional.scss
+++ b/source/sass/components/product-list-additional.scss
@@ -1,6 +1,6 @@
 @use "../base/variables" as *;
 
-.product-list-secondary {
+.product-list-additional {
   display: flex;
   flex-direction: column;
 }
