--- a/source/sass/components/product-list-main.scss
+++ b/source/sass/components/product-list-main.scss
@@ -1,17 +1,28 @@
 @use "../base/variables" as *;
 @use "../base/mixin" as mix;
 
-.product-list-primary {
+.product-list-main__wrapper {
   display: grid;
   grid-template-columns: 1fr;
 
   @media (min-width: $tablet-width) {
+    margin: 0 auto;
+    width: calc(100% - 30px);
+
     grid-template-columns: 1fr 1fr;
-    gap: 60px;
+    column-gap: 60px;
+    row-gap: 140px;
   }
 
   @media (min-width: $desktop-width) {
+    width: calc(100% - 110px);
+    max-width: $desktop-width;
     grid-template-columns: repeat(4, 1fr);
     gap: 80px;
   }
+}
+
+.product-list-main__item {
+  display: flex;
+  flex-direction: column;
 }
