--- a/source/sass/components/program-form.scss
+++ b/source/sass/components/program-form.scss
@@ -13,17 +13,29 @@
 }
 
 .program-form__wrapper {
-  padding-bottom: 32px;
-  display: grid;
-  grid-template-columns: 1fr;
-
-  @media (min-width: $tablet-width) {
-    padding: 0 40px 72px 40px;
-    grid-template-columns: repeat(4, 1fr);
-  }
-
   @media (min-width: $desktop-width) {
-    padding: 0 0 82px 0;
+    width: 80%;
+    max-width: $desktop-width;
+    margin: 0 auto;
+
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 80px;
+  }
+}
+
+.program-form__feed-wrapper {
+  @media (min-width: $desktop-width) {
+    width: auto;
+    margin: 0;
+  }
+}
+
+.program-form__cat-wrapper {
+  @media (min-width: $desktop-width) {
+    width: auto;
+    margin: 0;
+    flex-grow: 1;
   }
 }
 
@@ -34,90 +46,72 @@
 }
 
 .program-form__group {
-  display: grid;
-  grid-template-columns: 1fr;
-  row-gap: 14px;
-  grid-column: 1 / -1;
-  margin: 0;
+  margin: 0 0 23px 0;
   padding: 0;
 
   border: none;
 
-  &--cat-information {
-    margin: 0 0 24px 0;
+  &--additional {
+    margin: 0 0 34px 0;
+  }
 
-    @media (min-width: $tablet-width) {
+  @media (min-width: $tablet-width) {
+    margin: 0 0 65px 0;
+
+    &--cat-information {
       margin: 0 0 72px 0;
     }
 
-    @media (min-width: $desktop-width) {
-      margin: 0 0 69px 0;
-      grid-column: 1 / 3;
+    &--feed-program {
+      margin: 0 0 71px 0;
+    }
+
+    &--additional {
+      margin: 0 0 54px 0;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0 0 67px 0;
+
+    &--additional {
+      margin: 0 0 61px 0;
+    }
+
+    &--cat-information {
+      display: flex;
     }
   }
 
   &--feed-program {
-    margin: 0 0 26px 0;
-
-    @media (min-width: $tablet-width) {
-      margin: 0 0 71px 0;
-    }
-
-    @media (min-width: $desktop-width) {
-      margin: 0 0 65px 80px;
-      grid-column: 3 / -1;
-    }
-  }
-
-  &--owner {
-    margin: 0 0 23px 0;
-
-    @media (min-width: $tablet-width) {
-      margin: 0 0 65px 0;
-    }
-
-    @media (min-width: $desktop-width) {
-      display: flex;
-      gap: 78px;
-      margin: 0 0 67px 0;
-    }
-  }
-
-  &--commentary {
-    margin: 0 0 22px 0;
-
-    @media (min-width: $tablet-width) {
-      margin: 0 0 65px 0;
-    }
-
-    @media (min-width: $tablet-width) {
-      margin: 0 0 67px 0;
-    }
-  }
-
-  &--additional {
-    margin: 0 0 34px 0;
-
-    @media (min-width: $tablet-width) {
-      margin: 0 0 54px 0;
-    }
-
-    @media (min-width: $tablet-width) {
-      margin: 0 0 61px 0;
+    @media (max-width: $tablet-width) {
+      border: 1px solid $border-color;
     }
   }
 }
 
-.program-form__group-title {
-  padding: 0;
+.program-form__input-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+
+  @media (min-width: $tablet-width) {
+    gap: 20px;
+  }
+
+  &--owner {
+    @media (min-width: $desktop-width) {
+      flex-direction: row;
+      gap: 78px;
+    }
+  }
+}
+
+.program-form__group-title-wrapper {
   margin: 0 0 35px 0;
-  font-size: 24px;
-  line-height: 26px;
 
   @media (min-width: $tablet-width) {
     margin: 0 0 76px 0;
-    font-size: 36px;
-    line-height: 36px;
   }
 
   &--additional {
@@ -127,10 +121,77 @@
   }
 }
 
+.program-form__group-title {
+  padding: 0 23px 0 0;
+  font-size: 24px;
+  line-height: 26px;
+  display: inline-block;
+
+  background-color: $bg-color;
+
+  @media (min-width: $tablet-width) {
+    font-size: 36px;
+    line-height: 36px;
+    padding: 0 40px;
+  }
+}
+
+.program-form__line-break {
+  @media (min-width: $tablet-width) {
+    display: none;
+  }
+}
+
 .program-form__label {
   flex-grow: 1;
   display: flex;
   gap: 13px;
+
+  &--email {
+    position: relative;
+
+    &::after {
+      z-index: -1;
+      position: absolute;
+      content: "";
+      top: 50%;
+      right: 15px;
+      transform: translateY(-50%);
+      width: 18px;
+      height: 14px;
+      background-image: url("../../img/icon-email.svg");
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+
+      @media (min-width: $tablet-width) {
+        right: 18px;
+      }
+    }
+  }
+
+  &--phone {
+    position: relative;
+
+    &::after {
+      z-index: -1;
+      position: absolute;
+      content: "";
+      top: 50%;
+      right: 15px;
+      transform: translateY(-50%);
+      width: 15px;
+      height: 15px;
+      background-image: url("../../img/icon-phone.svg");
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+
+      @media (min-width: $tablet-width) {
+        right: 18px;
+      }
+    }
+  }
 }
 
 .program-form__label-text {
@@ -152,6 +213,7 @@
   color: $font-color-secondary;
 
   border: 1px solid $border-color;
+  background-color: transparent;
 
   &--has-icon {
     border-color: $border-color-secondary;
@@ -188,14 +250,29 @@
   }
 }
 
+.program-form__button-wrapper {
+  margin: 0 0 32px 0;
+  display: grid;
+  grid-template-columns: 1fr;
+
+  @media (min-width: $tablet-width) {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 64px;
+    margin: 0 0 72px 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    gap: 84px;
+    margin: 0 0 82px 0;
+  }
+}
+
 .program-form__button {
   margin: 0 0 21px 0;
-  padding: 7px 45px;
+  padding: 13px 45px;
 
   @media (min-width: $tablet-width) {
     margin: 0;
-    padding: 13px 45px;
-    grid-column: 1 / 3;
 
     font-size: 20px;
     line-height: 20px;
@@ -213,9 +290,6 @@
   @media (min-width: $tablet-width) {
     align-items: center;
     justify-content: start;
-    grid-column: 3 / -1;
-    margin-left: 64px;
-
     font-size: 16px;
   }
 }
