--- a/source/sass/components/site-list.scss
+++ b/source/sass/components/site-list.scss
@@ -12,14 +12,37 @@
   text-align: center;
 
   border: 1px solid $border-color;
+  background-color: $bg-color;
 
   @media (min-width: $tablet-width) {
     padding: 18px 17px 12px;
     border: none;
+    background-color: transparent;
+  }
+}
+
+.site-list__item--active .site-list__link{
+  @media (min-width: $tablet-width) {
+    &::after {
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 2px;
+      bottom: -12px;
+      left: 0;
+      background-color: $bg-color-accent;
+    }
+  }
+
+  @media (min-width: $tablet-width) {
+    &--cat-theme::after {
+      background-color: $bg-color;
+    }
   }
 }
 
 .site-list__link {
+  position: relative;
   font-weight: 500;
   font-size: 20px;
   line-height: 20px;
