--- a/source/sass/components/special-offer.scss
+++ b/source/sass/components/special-offer.scss
@@ -1,9 +1,10 @@
 @use "../base/variables" as *;
 
 .special-offer {
+  position: relative;
   display: flex;
   justify-content: center;
-  padding: 185px 60px 43px;
+  padding: 185px 55px 43px;
 
   background-image: url("../../img/special-offer.jpg");
   background-repeat: no-repeat;
@@ -13,22 +14,54 @@
 
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 
+  &::after {
+    position: absolute;
+    content: "";
+    width: 57px;
+    height: 61px;
+    top: 65px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-image: url("../../img/icon-gift.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    @media (min-width: $tablet-width) {
+      top: 50%;
+      left: 88px;
+      transform: translateY(-50%);
+    }
+
+    @media (min-width: $desktop-width) {
+      top: 62px;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+  }
+
   @media (min-width: $tablet-width) {
+    min-height: 200px;
     justify-content: end;
     padding: 71px 124px 69px 0;
+
+    background-position: right 60%;
+    box-shadow: none;
   }
 
   @media (min-width: $desktop-width) {
     align-items: end;
     justify-content: center;
-    padding: 185px 43px 42px 41px;
+    padding: 185px 20px 42px;
+
+    background-position: center;
   }
 }
 
 .special-offer__text {
   margin: 0;
-  max-width: 165px;
   text-align: center;
+  max-width: 161px;
 
   font-size: 16px;
   line-height: 20px;
