--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -1,5 +1,7 @@
 // Colors
 
+$error: #ff8282;
+
 $bg-color: #ffffff;
 $bg-color-extra: #f2f2f2;
 $bg-color-secondary: #eaeaea;
@@ -7,17 +9,22 @@ $bg-color-accent: #68b738;
 
 $font-color: #000000;
 $font-color-secondary: #444444;
+$font-color-secondary-active: rgba(68, 68, 68, 0.3);
 $font-color-secondary-special: #222222;
 $font-color-accent: #ffffff;
+$font-color-accent-pressed: rgba(255, 255, 255, 0.3);
 
 $link-color: #000000;
 $link-color-secondary: #444444;
 
 $button-color: #69b738;
+$button-color-hover: #5eaa2f;
 
 $border-color: #e7e7e7;
 $border-color-secondary: #cdcdcd;
+$border-color-secondary-hover: #bababa;
 $border-color-third: #ebebeb;
+$border-color-focus: #444444;
 
 
 // Font
