--- a/source/sass/components/main-header.scss
+++ b/source/sass/components/main-header.scss
@@ -22,11 +22,11 @@
 
   @media (min-width: $tablet-width) {
     flex-direction: row;
-    width: calc(100% - 30px);
+    width: calc(100% - 60px);
   }
 
   @media (min-width: $desktop-width) {
-    width: calc(100% - 110px);
+    width: calc(100% - 220px);
     max-width: $desktop-width;
   }
 }
@@ -70,5 +70,6 @@
 .main-header__nav {
   @media (min-width: $tablet-width) {
     margin-left: auto;
+    max-width: 80%;
   }
 }
