--- a/source/sass/components/button.scss
+++ b/source/sass/components/button.scss
@@ -14,4 +14,12 @@
   border: none;
   background-color: $button-color;
   cursor: pointer;
+
+  &:hover {
+    background-color: $button-color-hover;
+  }
+
+  &:active {
+    color: $font-color-accent-pressed;
+  }
 }
