--- a/source/sass/components/checkbox.scss
+++ b/source/sass/components/checkbox.scss
@@ -78,3 +78,13 @@
       height: 19px;
     }
 }
+
+.checkbox__input:hover + .checkbox__mark {
+  border-color: $border-color-secondary-hover;
+}
+
+.checkbox__input:disabled + .checkbox__mark,
+.checkbox__input:disabled ~ .checkbox__text{
+  opacity: 0.3;
+  cursor: default;
+}
