--- a/source/sass/components/product-card-main.scss
+++ b/source/sass/components/product-card-main.scss
@@ -214,5 +214,14 @@ $plus-icon-color: #d3d3d3;
     @media (min-width: $tablet-width) {
       margin: auto 0 0 0;
     }
+
+    &:hover {
+      background-color: $border-color-third;
+    }
+
+    &:active {
+      background-color: $border-color-third;
+      color: $font-color-secondary-active;
+    }
   }
 }
