--- a/source/sass/components/radio.scss
+++ b/source/sass/components/radio.scss
@@ -61,18 +61,28 @@
 
 .radio__input:checked + .radio__mark::after {
   position: absolute;
-    content: "";
-    width: 13px;
-    height: 13px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  content: "";
+  width: 13px;
+  height: 13px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 
-    background-color: $bg-color-accent;
-    border-radius: 50%;
+  background-color: $bg-color-accent;
+  border-radius: 50%;
 
-    @media (min-width: $tablet-width) {
-      width: 18px;
-      height: 18px;
-    }
+  @media (min-width: $tablet-width) {
+    width: 18px;
+    height: 18px;
+  }
+}
+
+.radio__input:hover + .radio__mark {
+  border-color: $border-color-secondary-hover;
+}
+
+.radio__input:disabled + .radio__mark,
+.radio__input:disabled ~ .radio__text{
+  opacity: 0.3;
+  cursor: default;
 }
